--- a/style.css
+++ b/style.css
@@ -4,21 +4,22 @@
 
 h1{
   text-align: center;
-  font-size: 40px;
+  font-size: 2.5em;
   padding: auto;
 }
 h2{
   text-align: center;
-  font-size: 30px;
-  padding: auto;  
-  margin: auto;
+  font-size: 2em;
+  padding: 0 auto;  
+  margin: 0 auto;
 }
 
 .field{
   padding: auto;
+  text-align: justify;
   width: 70%;
-  margin: auto;
-  margin-bottom: 60px;
+  margin: 0 auto;
+  margin-bottom: 4em;
 }
 
 a{
@@ -30,75 +31,34 @@ a{
 p{
   width: 50%;
   margin: auto;
-  padding-bottom: 50px;
+  padding-bottom: 4em;
 }
 
 ul{
   list-style: none;
   
 }
+#results{
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 5em;
+  width: 70%;
+  justify-content: center;
+}
 
 #links{
   display: flex;
   position: relative;
   flex-direction: column;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-  padding: auto;
+  padding: 0 auto;
   width: 60%;
   margin: auto;
-  margin-bottom: 60px;
+  margin-bottom: 3em;
   
   
-}
-
-#formsurv{
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  height: 440px;
-  width: 100%;
-  margin: auto;
-  
-}
-
-#redback{
-  padding-bottom: 30px;
-  margin-bottom: 15px;
-  width: 80%;
-  font-family: Raleway;
-  border-radius: 3px;
-  border-width: 1px;
-  
-}
-
-#greenback{
-  padding-bottom: 30px;
-  margin-bottom: 15px;
-  width: 80%;
-  font-family: Raleway;
-  border-radius: 3px;
-  border-width: 1px;
-
-}
-
-#blueback{
-padding-bottom: 30px;
-  margin-bottom: 15px;
-  width: 80%;
-  font-family: Raleway;
-  border-radius: 3px;
-  border-width: 1px;
-
-}
-
-#whiteback{
-  padding-bottom: 30px;
-  margin-bottom: 15px;
-  width: 80%;
-  font-family: Raleway;
-  border-radius: 3px;
-  border-width: 1px;
-
 }
 button{ 
   font-family: Raleway;
@@ -106,14 +66,13 @@ button{
   color: white;
   background-color: black;
   display: flex;
-  font-size: 30px;
+  font-size: 2.5em;
   margin: auto;
-  margin-top: 60px; 
+  margin-top: 2.5em; 
   padding: auto;
   width: 50%;
   justify-content: center;
-  border-radius: 15px;
-  border-width: 1px;
+  border-radius: 0.6em;
   
   
 }
