--- a/style.css
+++ b/style.css
@@ -85,3 +85,72 @@ img{
 	justify-content: center;
 	align-items: center;
 }
+@media screen and (max-width: 1024px){
+	button{
+		font-size: 2.2em;
+	}
+	#results{
+		font-size: 1.2em
+	}
+	h1{
+		font-size: 2.2em;
+
+	}
+	h2{
+		font-size: 2.2em;
+	}
+	.field{
+		font-size: 1em
+	}
+}
+@media screen and (max-width: 900px){
+	button{
+		font-size: 1.93em;
+	}
+	#results{
+		font-size: 1.05em;
+	}
+	h1{
+		font-size: 1.93em;
+	}
+	h2{
+		font-size: 1.93em;
+	}
+	.field{
+		font-size: 1em;
+	}
+}
+@media screen and (max-width: 768px){
+	button{
+		font-size: 1.65em;
+	}
+	#results{
+		font-size: 0.9em;
+	}
+	h1{
+		font-size: 1.65em;
+	}
+	h2{
+		font-size: 1.65em;
+	}
+	.field{
+		font-size: 0.8em;
+	}
+}
+@media screen and (max-width: 480px){
+	button{
+		font-size: 1.03em;
+	}
+	#results{
+		font-size: 0.5626em;
+	}
+	h1{
+		font-size: 1.03em;
+	}
+	h2{
+		font-size: 1.03em;
+	}
+	.field{
+		font-size: 0.5em;
+	}
+}
